# jolt

./: Cargo.toml
.github/workflows/: rust.yml
dev/bench/: data.js
examples/jpeg2000/: Cargo.toml
examples/jpeg2000/guest/: Cargo.toml
examples/jpeg2000/guest/src/: lib.rs  main.rs
examples/jpeg2000/src/: main.rs
jolt-core/src/benches/: bench.rs
jolt-core/src/field/: mod.rs
jolt-core/src/jolt/subtable/: and.rs  div_by_zero.rs  eq.rs  eq_abs.rs  identity.rs  left_is_zero.rs  left_msb.rs  low_bit.rs  lt_abs.rs  ltu.rs  or.rs  right_is_zero.rs  right_msb.rs  sign_extend.rs  sra_sign.rs  srl.rs  truncate_overflow.rs  xor.rs
jolt-core/src/jolt/vm/: bytecode.rs  mod.rs  rv32i_vm.rs
jolt-core/src/poly/: dense_interleaved_poly.rs  sparse_interleaved_poly.rs
jolt-core/src/poly/commitment/: binius.rs  commitment_scheme.rs  hyperkzg.rs  kzg.rs  zeromorph.rs
jolt-core/src/r1cs/: builder.rs  inputs.rs  key.rs  ops.rs  spartan.rs
jolt-core/src/subprotocols/: sparse_grand_product.rs  sumcheck.rs
jolt-core/src/utils/: mod.rs
zklean-extractor/: README.md  build.rs
zklean-extractor/package-template/src/: lake-manifest.json
zklean-extractor/src/: instruction.rs  mle_ast.rs  r1cs.rs  util.rs
zklean-extractor/src/modules/: mod.rs  util.rs
