[package]
name = "jpeg2000-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
serde = { version = "1.0", default-features = false }       # the `default-features=false` is very important to avoid triggering some compilation errors
jolt = { package = "jolt-sdk", path = "../../../jolt-sdk" }
